Added some more social media links with icons and subtle style changes

--- a/style.css
+++ b/style.css
@@ -90,8 +90,8 @@ body:before{width:0px;}
 100%{top:50%;width:100%;padding-bottom:100%;}
 }
 }
-@media screen and (min-height:480px){.profile-card header{width:auto;height:auto;padding:30px 20px;display:block;float:none;border-right:none;}
-.profile-card .profile-bio{width:auto;height:auto;padding:15px 20px 30px 20px;display:block;float:none;}
+@media screen and (min-height:480px){.profile-card header{width:auto;height:auto;padding:30px 20px 20px 20px;display:block;float:none;border-right:none;}
+.profile-card .profile-bio{width:auto;height:auto;padding:10px 10px 1px 10px;display:block;float:none;}
 .profile-social-links{width:100%;display:block;float:none;}
 @-webkit-keyframes materia{0%{background:#E0E0E0;}
 50%{-webkit-border-radius:4px;}
